# reload-wpg-engine

./: .dockerignore  .env.example  .env.prod  .env.staging  .gitignore  ADMIN_SYSTEM.md  DEPLOYMENT.md  Dockerfile  FINAL_DEPLOYMENT_INSTRUCTIONS.md  Makefile  QUICKSTART.md  README.md  SECURE_DEPLOYMENT_GUIDE.md  SYNONYMS_GUIDE.md  TROUBLESHOOTING.md  YOUR_SERVER_GUIDE.md  add_max_points_migration.py  add_registry_id_secret.md  check_deployment.md  debug_admin_rights.py  docker-compose.dev.yml  docker-compose.yml  fix_yc_auth.md  init_game.py  main.py  manual_deployment_test.md  pyproject.toml  recreate_database.py  requirements.txt  restart_bot.py  run_bot.py  run_migrations.py  test_admin_system.py  test_engine.py  test_rag_demo.py  test_registration_points.py  test_settings.py  update_github_secret_instructions.md  wpg_engine.db
.github/workflows/: deploy.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: ADMIN_CHAT_SUPPORT.md  ADMIN_SYSTEM.md  CODE_FORMATTING.md  COUNTRY_SWITCH_FIX.md  DEPLOYMENT.md  DNS_ISSUE_ANALYSIS.md  DOCKER_CACHE.md  DOCKER_DNS_FIX.md  EXAMPLE_SELECTION_FSM.md  FINAL_DEPLOYMENT_INSTRUCTIONS.md  RAG_SYSTEM.md  SECURE_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md  YOUR_SERVER_GUIDE.md  add_registry_id_secret.md  check_deployment.md  fix_yc_auth.md  manual_deployment_test.md  update_github_secret_instructions.md
examples/: rag_demo.py
migrations/: 001_add_country_synonyms.py  002_add_max_population.py  003_add_unique_admin_constraint.py  004_update_military_public.py  005_admin_without_country.py  006_add_performance_indexes.py  007_add_examples.py  008_modify_examples_to_countries.py  009_unique_telegram_id.py  010_unique_country_id.py  __init__.py  migration_runner.py
scripts/: check-dns.sh  check_duplicates.py  debug-auth.sh  deploy.sh  local-test.sh  monitor.sh  quick-deploy.sh  quick-deploy.template.sh  run_migrations.py  setup-deployment.sh  setup-server.sh  setup-server.template.sh
tests/: __init__.py  conftest.py  test_admin_chat.py  test_admin_chat_registration.py  test_admin_refactoring.py  test_admin_system.py  test_country_switch.py  test_delete_country.py  test_engine.py  test_example_selection.py  test_examples.py  test_game_engine.py  test_gen_command_database.py  test_long_messages.py  test_message_classifier.py  test_message_stats.py  test_message_system.py  test_messages.py  test_rag_analyzers.py  test_rag_context.py  test_rag_formatting.py  test_rag_system.py  test_rag_system_enhanced.py  test_random_command.py  test_registration_points.py  test_registration_with_examples.py  test_reregistration.py  test_send_admin_copy.py  test_settings.py
wpg_engine/: __init__.py
wpg_engine/adapters/: __init__.py
wpg_engine/config/: __init__.py  settings.py
wpg_engine/core/: __init__.py  engine.py  (+5 more)
(+26 files in other folders)
